<?xml version="1.0"?>
<package format="2">
  <name>sensor_monitor</name>
  <version>0.0.0</version>
  <description>The hardware_monitor package</description>
  <maintainer email="yuma.nihei@tier4.jp">yn</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <export>
  </export>
</package>
